Upgraded to GWT 2.7 + Custom social auth mecanism to consume SSO provider