@@ -9,18 +9,21 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <gwt.version>2.6.1</gwt.version>
-        <gwtp.version>1.3.1</gwtp.version>
+        <gwt.version>2.7.0</gwt.version>
+        <gwtp.version>1.4</gwtp.version>
         <gin.version>2.1.2</gin.version>
         <guice.version>3.0</guice.version>
 
         <spring.version>4.0.5.RELEASE</spring.version>
-        <spring-security.version>3.2.4.RELEASE</spring-security.version>
+        <oauth.version>2.0.5.RELEASE</oauth.version>
+        <spring-security.version>3.2.5.RELEASE</spring-security.version>
+        <spring-social.version>1.1.0.RELEASE</spring-social.version>
         <servlet.version>3.1.0</servlet.version>
         <jackson.version>2.3.1</jackson.version>
         <logback.version>1.1.1</logback.version>
         <slf4j.version>1.7.6</slf4j.version>
         <jsr250.version>1.0</jsr250.version>
+        <google-oauth.version>1.19.0</google-oauth.version>
 
         <!--Plugin versions-->
         <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
@@ -122,6 +125,11 @@
 
         <!-- Security -->
         <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${oauth.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring-security.version}</version>
@@ -141,6 +149,22 @@
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+
+        <!-- Spring Social -->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-security</artifactId>
+            <version>${spring-social.version}</version>
+        </dependency>
+
+        <!-- thirdParty -->
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client</artifactId>
+            <version>${google-oauth.version}</version>
+        </dependency>
+
+        <!-- Others -->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>jsr250-api</artifactId>
@@ -183,7 +207,7 @@
                     <mode>htmlunit</mode>
                     <gen>gen</gen>
 
-                    <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=512m</extraJvmArgs>
+                    <extraJvmArgs>-Xss1024k -Xmx512M</extraJvmArgs>
                     <logLevel>INFO</logLevel>
 
                     <copyWebapp>true</copyWebapp>
